shallowsize-plugin/src/test/resources/org/jub/kotlin/compiler/code-gen/fir/box/shallowSizeExists/shallowSizeExists.kt
package org.jub.kotlin.compiler.box

data class ShallowSizeExists(val a: Int) {
    fun <!FUNCTION_EXISTS!>shallowSize<!>(): String = "Huh"
}